@@ -1,3 +1,11 @@
+2005-12-03 Niklas Knutsson  <nq@altern.org>
+
+	* Display "x < 3 && x > 1" as "1 < x < 3"
+
+2005-12-01 Niklas Knutsson  <nq@altern.org>
+
+	* Make sure that window does not expand when updating status text
+
 2005-11-29 Niklas Knutsson  <nq@altern.org>
 
 	* Do not display (x)(y)^z with multiplication sign
